--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -14,10 +14,10 @@
       <tbody>
       <tr *ngFor="let item of bizonylatservice.BizonylatPenztarDto; let i = index">
         <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-            (click)="penztarvalasztas(i)">{{item.PENZTARKOD}}</td>
-        <td>{{item.PENZTAR1}}</td>
-        <td>{{item.PENZNEM}}</td>
-        <td>{{item.EGYENLEG}}</td>
+            (click)="penztarvalasztas(i)">{{item.Penztarkod}}</td>
+        <td>{{item.Penztar1}}</td>
+        <td>{{item.Penznem}}</td>
+        <td>{{item.Egyenleg}}</td>
       </tr>
       </tbody>
     </table>
