--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="penztar"
                maxlength="200" required autocomplete="off"
-               [(ngModel)]="penztarservice.DtoEdited.PENZTAR1" name="penztar">
+               [(ngModel)]="penztarservice.DtoEdited.Penztar1" name="penztar">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="penznem"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="penztarservice.DtoEdited.PENZNEM" name="penznem">
+               [(ngModel)]="penztarservice.DtoEdited.Penznem" name="penznem">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button"
