--- a/src/app/penztar/penztartetel/penztartetel-szerkesztes/penztartetel-szerkesztes.component.html
+++ b/src/app/penztar/penztartetel/penztartetel-szerkesztes/penztartetel-szerkesztes.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-md-4">
         <select #jogcim type="text" class="form-control form-control-sm"
-                [(ngModel)]="penztartetelservice.DtoEdited.JOGCIM" name="jogcim"
+                [(ngModel)]="penztartetelservice.DtoEdited.Jogcim" name="jogcim"
                 (change)="jogcimchange()">
           <option>Bevét korrekció</option>
           <option>Kiadás korrekció</option>
@@ -37,7 +37,7 @@
       <div class="col-md-4">
         <input #ugyfel type="text" class="form-control form-control-sm" id="ugyfel"
                autocomplete="off"
-               [(ngModel)]="penztartetelservice.DtoEdited.UGYFELNEV" name="ugyfel">
+               [(ngModel)]="penztartetelservice.DtoEdited.Ugyfelnev" name="ugyfel">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -47,7 +47,7 @@
       <div class="col-md-2">
         <input #bizonylatszam type="text" class="form-control form-control-sm" id="bizonylatszam"
                autocomplete="off"
-               [(ngModel)]="penztartetelservice.DtoEdited.BIZONYLATSZAM" name="bizonylatszam">
+               [(ngModel)]="penztartetelservice.DtoEdited.Bizonylatszam" name="bizonylatszam">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -57,7 +57,7 @@
       <div class="col-md-2">
         <input #bevetel type="text" class="form-control form-control-sm" id="bevetel"
                autocomplete="off"
-               [(ngModel)]="penztartetelservice.DtoEdited.BEVETEL" name="bevetel">
+               [(ngModel)]="penztartetelservice.DtoEdited.Bevetel" name="bevetel">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -67,7 +67,7 @@
       <div class="col-md-2">
         <input #kiadas type="text" class="form-control form-control-sm" id="kiadas"
                autocomplete="off"
-               [(ngModel)]="penztartetelservice.DtoEdited.KIADAS" name="kiadas">
+               [(ngModel)]="penztartetelservice.DtoEdited.Kiadas" name="kiadas">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -77,7 +77,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
                autocomplete="off"
-               [(ngModel)]="penztartetelservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+               [(ngModel)]="penztartetelservice.DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
