--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -21,10 +21,10 @@
       <td *ngIf="penztarservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="setClickedRow(i)">{{item.PENZTARKOD}}</td>
-      <td>{{item.PENZTAR1}}</td>
-      <td>{{item.PENZNEM}}</td>
-      <td>{{item.EGYENLEG}}</td>
+          (click)="setClickedRow(i)">{{item.Penztarkod}}</td>
+      <td>{{item.Penztar1}}</td>
+      <td>{{item.Penznem}}</td>
+      <td>{{item.Egyenleg}}</td>
     </tr>
     </tbody>
   </table>
