--- a/src/app/penztar/penztar-reszletek/penztar-reszletek.component.html
+++ b/src/app/penztar/penztar-reszletek/penztar-reszletek.component.html
@@ -4,40 +4,40 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].PENZTARKOD}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Penztarkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénztár:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].PENZTAR1}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Penztar1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].PENZNEM}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Penznem}}</td>
     </tr>
     <tr>
       <td class="egylabel">Egyenleg:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].EGYENLEG}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Egyenleg}}</td>
     </tr>
     <tr>
       <td class="egylabel">Nyitva:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1 && penztarservice.Dto[penztarservice.DtoSelectedIndex].NYITVA">Igen</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1 && !penztarservice.Dto[penztarservice.DtoSelectedIndex].NYITVA">Nem</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1 && penztarservice.Dto[penztarservice.DtoSelectedIndex].Nyitva">Igen</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1 && !penztarservice.Dto[penztarservice.DtoSelectedIndex].Nyitva">Nem</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="penztarservice.DtoSelectedIndex !== -1">{{penztarservice.Dto[penztarservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
