--- a/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -1,9 +1,9 @@
 <div class="alapkeret">
   <h5>{{projektservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].PROJEKTKOD}}</div>
-    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELNEV}} {{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELCIM}}</div>
-    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].MEGJEGYZES}}</div>
+    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].Projektkod}}</div>
+    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelnev}} {{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelcim}}</div>
+    <div style="font-size: smaller">{{projektservice.Dto[projektservice.DtoSelectedIndex].Megjegyzes}}</div>
   </div>
   <div>
     <nav>
