--- a/src/app/projekt/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt/projekt-napelem/projekt-napelem.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="inverter"
                maxlength="50" autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.NAPELEM"
+               [(ngModel)]="projektservice.DtoEdited.Napelem"
                name="inverter">
       </div>
     </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="dckw"
-               [(ngModel)]="projektservice.DtoEdited.DCKW"
+               [(ngModel)]="projektservice.DtoEdited.Dckw"
                name="dckw">
       </div>
     </div>
