--- a/src/app/projekt/projekt/projekt-reszletek/projekt-reszletek.component.html
+++ b/src/app/projekt/projekt/projekt-reszletek/projekt-reszletek.component.html
@@ -4,107 +4,107 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].PROJEKTKOD}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Projektkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Stsz:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].STATUSZ}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Statusz}}</td>
     </tr>
     <tr>
       <td class="egylabel">Műszaki állapot:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MUSZAKIALLAPOT}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Muszakiallapot}}</td>
     </tr>
     <tr>
       <td class="egylabel">Ügyfél:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELNEV}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelnev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cím:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELCIM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelcim}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefon:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELTELEFONSZAM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfeltelefonszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].UGYFELEMAIL}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelemail}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telepítési cím:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].TELEPITESICIM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Telepitesicim}}</td>
     </tr>
     <tr>
       <td class="egylabel">A projekt jellege:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].PROJEKTJELLEGE}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Projektjellege}}</td>
     </tr>
     <tr>
       <td class="egylabel">Inverter:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].INVERTER}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Inverter}}</td>
     </tr>
     <tr>
       <td class="egylabel"></td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].INVERTERALLAPOT}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Inverterallapot}}</td>
     </tr>
     <tr>
       <td class="egylabel">Napelem:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].NAPELEM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Napelem}}</td>
     </tr>
     <tr>
       <td class="egylabel"></td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].NAPELEMALLAPOT}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Napelemallapot}}</td>
     </tr>
     <tr>
       <td class="egylabel">DC, kW:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].DCKW}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Dckw}}</td>
     </tr>
     <tr>
       <td class="egylabel">AC, kVA:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].ACKVA}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Ackva}}</td>
     </tr>
     <tr>
       <td class="egylabel">Vállalási ár, netto:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].VALLALASIARNETTO}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Vallalasiarnetto}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].PENZNEM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Penznem}}</td>
     </tr>
     <tr>
       <td class="egylabel">Munkalapszám:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MUNKALAPSZAM}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Munkalapszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Keletkezett:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].KELETKEZETT | datehun}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Keletkezett | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megrendelve:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MEGRENDELVE | datehun}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Megrendelve | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Kivitelezési határidő:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].KIVITELEZESIHATARIDO | datehun}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Kivitelezesihatarido | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megjegyzés:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MEGJEGYZES}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Megjegyzes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td>{{projektservice.Dto[projektservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
