--- a/src/app/projekt/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="ugyfelnev"
                maxlength="200" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="projektservice.DtoEdited.UGYFELNEV" name="ugyfelnev">
+               [(ngModel)]="projektservice.DtoEdited.Ugyfelnev" name="ugyfelnev">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="UgyfelZoom()">...</button>
@@ -24,7 +24,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="ugyfelcim"
                autocomplete="off" readonly="true"
-               [(ngModel)]="projektservice.DtoEdited.UGYFELCIM" name="ugyfelcim">
+               [(ngModel)]="projektservice.DtoEdited.Ugyfelcim" name="ugyfelcim">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -34,7 +34,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="telepitesicim"
                autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.TELEPITESICIM" name="telepitesicim">
+               [(ngModel)]="projektservice.DtoEdited.Telepitesicim" name="telepitesicim">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -44,7 +44,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="projektjellege"
                autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.PROJEKTJELLEGE" name="projektjellege">
+               [(ngModel)]="projektservice.DtoEdited.Projektjellege" name="projektjellege">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -54,7 +54,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="kuldo"
                required
-               [(ngModel)]="projektservice.DtoEdited.VALLALASIARNETTO" name="kuldo">
+               [(ngModel)]="projektservice.DtoEdited.Vallalasiarnetto" name="kuldo">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -64,7 +64,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="penznem"
                maxlength="30" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="projektservice.DtoEdited.PENZNEM" name="penznem">
+               [(ngModel)]="projektservice.DtoEdited.Penznem" name="penznem">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="PenznemZoom()">...</button>
@@ -77,7 +77,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
                autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+               [(ngModel)]="projektservice.DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
