--- a/src/app/projekt/projekt/projekt-inverter/projekt-inverter.component.html
+++ b/src/app/projekt/projekt/projekt-inverter/projekt-inverter.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="inverter"
                maxlength="50" autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.INVERTER"
+               [(ngModel)]="projektservice.DtoEdited.Inverter"
                name="inverter">
       </div>
     </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="ackva"
-               [(ngModel)]="projektservice.DtoEdited.ACKVA"
+               [(ngModel)]="projektservice.DtoEdited.Ackva"
                name="ackva">
       </div>
     </div>
