--- a/src/app/ugyfelter/ugyfel-ter/ugyfel-ter.component.html
+++ b/src/app/ugyfelter/ugyfel-ter/ugyfel-ter.component.html
@@ -7,7 +7,7 @@
     </button>
   </ng-container>
   <ng-container *ngIf="bejelentkezve">
-    <p>Üdvözöljük <b>{{Dto.ugyfelDto.NEV}}</b> ({{Dto.ugyfelDto.CIM}}, {{Dto.ugyfelDto.TELEFON}}, {{Dto.ugyfelDto.EMAIL}}) az önnel kapcsolatos tárolt adatok a következők - válasszon projektet:</p>
+    <p>Üdvözöljük <b>{{Dto.ugyfelDto.Nev}}</b> ({{Dto.ugyfelDto.Cim}}, {{Dto.ugyfelDto.Telefon}}, {{Dto.ugyfelDto.Email}}) az önnel kapcsolatos tárolt adatok a következők - válasszon projektet:</p>
     <app-projekt-tabla [Dto]="Dto.projektDto" (idclick)="setProjektClickedRow($event)"></app-projekt-tabla>
   </ng-container>
   <ng-container *ngIf="projektkod > 0">
