--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-levalasztas/projekt-bizonylatesirat-levalasztas.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-levalasztas/projekt-bizonylatesirat-levalasztas.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{projektkapcsolatservice.Dto[projektkapcsolatservice.DtoSelectedIndex].KAPCSOLAT}} ({{projektkapcsolatservice.Dto[projektkapcsolatservice.DtoSelectedIndex].TIPUS}}) leválasztása</h5>
+  <h5>{{projektkapcsolatservice.Dto[projektkapcsolatservice.DtoSelectedIndex].Kapcsolat}} ({{projektkapcsolatservice.Dto[projektkapcsolatservice.DtoSelectedIndex].Tipus}}) leválasztása</h5>
   <p>Biztosan le akarja választani ezt a tételt a projektről?</p>
   <div class="row no-gutters" style="margin-bottom: 10px">
     <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
