--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
@@ -38,13 +38,13 @@
           (click)="levalasztas(i)">
           <i class="fa fa-minus" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="setClickedRow(i)">{{item.PROJEKTKAPCSOLATKOD}}</td>
-      <td>{{item.KAPCSOLAT}}</td>
-      <td>{{item.TIPUS}}</td>
-      <td>{{item.AZONOSITO}}</td>
-      <td>{{item.KELETKEZETT | datehun}}</td>
-      <td>{{item.IRANY}}</td>
-      <td>{{item.TARGY}}</td>
+          (click)="setClickedRow(i)">{{item.Projektkapcsolatkod}}</td>
+      <td>{{item.Kapcsolat}}</td>
+      <td>{{item.Tipus}}</td>
+      <td>{{item.Azonosito}}</td>
+      <td>{{item.Keletkezett | datehun}}</td>
+      <td>{{item.Irany}}</td>
+      <td>{{item.Targy}}</td>
     </tr>
     </tbody>
   </table>
