projektteendo és szamlazasirend

--- a/src/app/projekt/projektteendo/projekt-teendo-szerkesztes/projekt-teendo-szerkesztes.component.html
+++ b/src/app/projekt/projektteendo/projekt-teendo-szerkesztes/projekt-teendo-szerkesztes.component.html
@@ -33,7 +33,7 @@
       <div class="col-md-5">
         <input type="text" class="form-control form-control-sm" id="teendo"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="projektteendoservice.DtoEdited.TEENDO" name="teendo">
+               [(ngModel)]="projektteendoservice.DtoEdited.Teendo" name="teendo">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="TeendoZoom()">...</button>
@@ -46,7 +46,7 @@
       <div class="col-md-6">
         <input type="text" class="form-control form-control-sm" id="leiras"
                autocomplete="off"
-               [(ngModel)]="projektteendoservice.DtoEdited.LEIRAS" name="leiras">
+               [(ngModel)]="projektteendoservice.DtoEdited.Leiras" name="leiras">
       </div>
     </div>
 
