--- a/src/app/projekt/szamlazasirend/projekt-szamlazasirend-reszletek/projekt-szamlazasirend-reszletek.component.html
+++ b/src/app/projekt/szamlazasirend/projekt-szamlazasirend-reszletek/projekt-szamlazasirend-reszletek.component.html
@@ -4,33 +4,33 @@
     <tbody>
     <tr>
       <td class="egylabel">Összeg:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].OSSZEG}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Osszeg}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].PENZNEM}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Penznem}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megjegyzés:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].MEGJEGYZES}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Megjegyzes}}</td>
     </tr>
 
 
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
