--- a/src/app/projekt/szamlazasirend/projekt-szamlazasirend-szerkesztes/projekt-szamlazasirend-szerkesztes.component.html
+++ b/src/app/projekt/szamlazasirend/projekt-szamlazasirend-szerkesztes/projekt-szamlazasirend-szerkesztes.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="osszeg"
                required autocomplete="off"
-               [(ngModel)]="szamlazasirendservice.DtoEdited.OSSZEG" name="osszeg">
+               [(ngModel)]="szamlazasirendservice.DtoEdited.Osszeg" name="osszeg">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="penznem"
                maxlength="3" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="szamlazasirendservice.DtoEdited.PENZNEM" name="penznem">
+               [(ngModel)]="szamlazasirendservice.DtoEdited.Penznem" name="penznem">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="PenznemZoom()">...</button>
@@ -33,7 +33,7 @@
       <div class="col-md-6">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
                autocomplete="off"
-               [(ngModel)]="szamlazasirendservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+               [(ngModel)]="szamlazasirendservice.DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
