--- a/src/app/projekt/projektteendo/projekt-teendo-list/projekt-teendo-list.component.html
+++ b/src/app/projekt/projektteendo/projekt-teendo-list/projekt-teendo-list.component.html
@@ -24,12 +24,12 @@
     <tbody>
     <ng-container *ngFor="let item of projektteendoservice.Dto; let i = index">
       <tr>
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.PROJEKTTEENDOKOD}}</td>
-        <td>{{item.DEDIKALVA}}</td>
-        <td>{{item.HATARIDO | datehun}}</td>
-        <td>{{item.ELVEGEZVE | datehun}}</td>
-        <td>{{item.TEENDO}}</td>
-        <td style="min-width: 500px">{{item.LEIRAS}}</td>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.Projektteendokod}}</td>
+        <td>{{item.Dedikalva}}</td>
+        <td>{{item.Hatarido | datehun}}</td>
+        <td>{{item.Elvegezve | datehun}}</td>
+        <td>{{item.Teendo}}</td>
+        <td style="min-width: 500px">{{item.Leiras}}</td>
       </tr>
     </ng-container>
     </tbody>
