--- a/src/app/projekt/projektteendo/projekt-teendo-reszletek/projekt-teendo-reszletek.component.html
+++ b/src/app/projekt/projektteendo/projekt-teendo-reszletek/projekt-teendo-reszletek.component.html
@@ -4,42 +4,42 @@
     <tbody>
     <tr>
       <td class="egylabel">Dedikálva:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].DEDIKALVA}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Dedikalva}}</td>
     </tr>
     <tr>
       <td class="egylabel">Határidő:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].HATARIDO | datehun}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Hatarido | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Elvégezve:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].ELVEGEZVE | datehun}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Elvegezve | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Teendő:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].TEENDO}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Teendo}}</td>
     </tr>
     <tr>
       <td class="egylabel">Leirás:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].LEIRAS}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Leiras}}</td>
     </tr>
 
 
 
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="projektteendoservice.DtoSelectedIndex !== -1">{{projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
