--- a/src/app/projekt/szamlazasirend/projekt-szamlazasirend-list/projekt-szamlazasirend-list.component.html
+++ b/src/app/projekt/szamlazasirend/projekt-szamlazasirend-list/projekt-szamlazasirend-list.component.html
@@ -22,10 +22,10 @@
   <tbody>
   <ng-container *ngFor="let item of szamlazasirendservice.Dto; let i = index">
     <tr>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.SZAMLAZASIRENDKOD}}</td>
-      <td>{{item.OSSZEG}}</td>
-      <td>{{item.PENZNEM}}</td>
-      <td>{{item.MEGJEGYZES}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.Szamlazasirendkod}}</td>
+      <td>{{item.Osszeg}}</td>
+      <td>{{item.Penznem}}</td>
+      <td>{{item.Megjegyzes}}</td>
     </tr>
   </ng-container>
   </tbody>
