--- a/src/app/ugyfelterlog/ugyfelterlog.component.html
+++ b/src/app/ugyfelterlog/ugyfelterlog.component.html
@@ -18,11 +18,11 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of ugyfelterlogservice.Dto; let i = index">
-      <td>{{item.UGYFELTERLOGKOD}}</td>
-      <td>{{item.UGYFELNEV}}</td>
-      <td>{{item.UGYFELCIM}}</td>
-      <td>{{item.LETREHOZTA}}</td>
-      <td>{{item.LETREHOZVA | datetimehun}}</td>
+      <td>{{item.Ugyfelterlogkod}}</td>
+      <td>{{item.Ugyfelnev}}</td>
+      <td>{{item.Ugyfelcim}}</td>
+      <td>{{item.Letrehozta}}</td>
+      <td>{{item.Letrehozva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
