--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-levalasztas/bizonylat-irat-levalasztas.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-levalasztas/bizonylat-irat-levalasztas.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatkapcsolatservice.Dto[bizonylatkapcsolatservice.DtoSelectedIndex].AZONOSITO}} {{bizonylatkapcsolatservice.Dto[bizonylatkapcsolatservice.DtoSelectedIndex].TIPUS}} irat leválasztása</h5>
+  <h5>{{bizonylatkapcsolatservice.Dto[bizonylatkapcsolatservice.DtoSelectedIndex].Azonosito}} {{bizonylatkapcsolatservice.Dto[bizonylatkapcsolatservice.DtoSelectedIndex].Tipus}} irat leválasztása</h5>
   <p>Biztosan le akarja választani ezt az iratot a bizonylatról?</p>
   <div class="row no-gutters" style="margin-bottom: 10px">
     <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
