--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-list/bizonylat-irat-list.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-list/bizonylat-irat-list.component.html
@@ -29,10 +29,10 @@
           (click)="levalasztas(i)">
         <i class="fa fa-minus" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="setClickedRow(i)">{{item.BIZONYLATKAPCSOLATKOD}}</td>
-      <td>{{item.AZONOSITO}}</td>
-      <td>{{item.KELETKEZETT | datehun}}</td>
-      <td>{{item.TARGY}}</td>
+          (click)="setClickedRow(i)">{{item.Bizonylatkapcsolatkod}}</td>
+      <td>{{item.Azonosito}}</td>
+      <td>{{item.Keletkezett | datehun}}</td>
+      <td>{{item.Targy}}</td>
     </tr>
     </tbody>
   </table>
