--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -22,7 +22,7 @@
   <tbody>
   <ng-container *ngFor="let item of Dto; let i = index">
     <tr>
-      <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.BIZONYLATKOD}}</td>
+      <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Bizonylatkod}}</td>
       <td *ngIf="!enIdclick">{{item.BIZONYLATKOD}}</td>
 
       <td>{{item.BIZONYLATSZAM}}</td>
