--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
@@ -1,7 +1,9 @@
 <div class="alapkeret">
   <h5>{{bizonylatkifizetesservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].OSSZEG}} {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].PENZNEM}} {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].FIZETESIMOD}}</div>
+    <div style="font-size: smaller">{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum}}
+      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Penznem}}
+      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Fizetesimod}}</div>
   </div>
   <div>
     <nav>
