--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-reszletek/bizonylat-kifizetes-reszletek.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-reszletek/bizonylat-kifizetes-reszletek.component.html
@@ -4,7 +4,7 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].KIFIZETESKOD}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Kifizeteskod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Dátum:</td>
@@ -12,32 +12,32 @@
     </tr>
     <tr>
       <td class="egylabel">Összeg:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].OSSZEG | number: '1.2-2'}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum | number: '1.2-2'}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].PENZNEM}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Penznem}}</td>
     </tr>
     <tr>
       <td class="egylabel">Fizetési mód:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].FIZETESIMOD}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Fizetesimod}}</td>
     </tr>
 
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td>{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
