--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="osszeg"
-               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.OSSZEG" name="osszeg">
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.Datum" name="osszeg">
       </div>
     </div>
 
@@ -32,7 +32,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="penznem"
                maxlength="3" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.PENZNEM" name="penznem">
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.Penznem" name="penznem">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="PenznemZoom()">...</button>
@@ -46,7 +46,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="fizetesimod"
                maxlength="20" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.FIZETESIMOD" name="fizetesimod">
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.Fizetesimod" name="fizetesimod">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="FizetesimodZoom()">...</button>
